@@ -1,5 +1,6 @@
 package com.voiz94.antcolonyoptimizationknapsackproblem.Util;
 
+import com.voiz94.antcolonyoptimizationknapsackproblem.Model.ACOResponse;
 import com.voiz94.antcolonyoptimizationknapsackproblem.Util.Model.Ant;
 import com.voiz94.antcolonyoptimizationknapsackproblem.Util.Model.Item;
 
@@ -9,11 +10,11 @@ import java.util.Random;
 
 public class AntColonyOptimization {
     private static final double ALPHA = 1.0; // коэффициент влияния феромона
-    private static final double BETA = 2.0; // коэффициент влияния дистанции
+    private static final double BETA = 3.0; // коэффициент влияния стоимости
     private static final double EVAPORATION = 0.5;
     private static final double Q = 500.0; // количество феромона, добавляемого каждой муравьиной колонией
-    private static final int NUMBER_OF_ANTS = 50;
-    private static final int NUMBER_OF_ITERATIONS = 100;
+    public static final int NUMBER_OF_ANTS = 5000;
+    public static final int NUMBER_OF_ITERATIONS = 300;
 
     private final int maxWeight;
     private final List<Item> items;
@@ -62,7 +63,6 @@ public class AntColonyOptimization {
                 double probabilityOfNotTakingItem = calculateProbability(i, false);
                 double sum = probabilityOfTakingItem + probabilityOfNotTakingItem;
                 probabilityOfTakingItem /= sum;
-                probabilityOfNotTakingItem /= sum;
 
                 if (ant.getTotalWeight() + items.get(i).getWeight() <= maxWeight && random.nextDouble() < probabilityOfTakingItem) {
                     ant.addItem(i, items.get(i));
@@ -77,7 +77,7 @@ public class AntColonyOptimization {
     }
 
     private Ant findBestAnt(List<Ant> ants) {
-        Ant bestAnt = ants.get(0);
+        Ant bestAnt = ants.getFirst();
         for (Ant ant : ants) {
             if (ant.getTotalValue() > bestAnt.getTotalValue()) {
                 bestAnt = ant;
@@ -86,7 +86,7 @@ public class AntColonyOptimization {
         return bestAnt;
     }
 
-    public void solve() {
+    public ACOResponse solve() {
         Ant bestAntEver = null;
 
         for (int iteration = 0; iteration < NUMBER_OF_ITERATIONS; iteration++) {
@@ -98,20 +98,8 @@ public class AntColonyOptimization {
             if (bestAntEver == null || bestAnt.getTotalValue() > bestAntEver.getTotalValue()) {
                 bestAntEver = bestAnt;
             }
-
-            System.out.println("Iteration " + iteration + ": Best value = " + bestAntEver.getTotalValue());
         }
 
-        System.out.println("Best solution found has value " + bestAntEver.getTotalValue() + " with weight " + bestAntEver.getTotalWeight());
-    }
-
-    public static void main(String[] args) {
-        List<Item> items = new ArrayList<>();
-        items.add(new Item(10, 60));
-        items.add(new Item(20, 100));
-        items.add(new Item(30, 120));
-
-        AntColonyOptimization aco = new AntColonyOptimization(items);
-        aco.solve();
+        return new ACOResponse(bestAntEver.getTotalValue(), bestAntEver.getTotalWeight());
     }
 }
